[gd_scene load_steps=12 format=2]

[ext_resource path="res://ui/screens/ScreenBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/screens/FlashCardPractice/components/Header/Header.tscn" type="PackedScene" id=2]
[ext_resource path="res://ui/stylized_shape/Circle.tscn" type="PackedScene" id=3]
[ext_resource path="res://ui/screens/FlashCardPractice/components/FlashCardSideButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://ui/screens/FlashCardPractice/components/CardPreviewBase/CardPreviewBase.tscn" type="PackedScene" id=5]
[ext_resource path="res://ui/screens/FlashCardPractice/components/CardButton/CardButton.tscn" type="PackedScene" id=6]
[ext_resource path="res://ui/screens/FlashCardPractice/FlashCardPractice.gd" type="Script" id=7]

[sub_resource type="Animation" id=1]
resource_name = "MOVE_TO_LEFT"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 152, 72 ), Vector2( -536, 72 ), Vector2( -536, -480 ), Vector2( 152, -480 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "MOVE_TO_ORIGIN"
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 0.5 ),
"update": 0,
"values": [ Vector2( 152, -480 ), Vector2( 152, 72 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "MOVE_TO_RIGHT"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 2, 1, 1 ),
"update": 0,
"values": [ Vector2( 152, 72 ), Vector2( 916, 72 ), Vector2( 916, -480 ), Vector2( 152, -480 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CardButton:rect_position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 152, 72 ) ]
}

[node name="FlashCardPractice" instance=ExtResource( 1 )]
script = ExtResource( 7 )

[node name="Layout" type="VBoxContainer" parent="MarginContainer" index="0"]
margin_left = 24.0
margin_top = 24.0
margin_right = 804.0
margin_bottom = 640.0
custom_constants/separation = 24

[node name="Header" parent="MarginContainer/Layout" index="0" instance=ExtResource( 2 )]

[node name="CardPreview" type="HBoxContainer" parent="MarginContainer/Layout" index="1"]
margin_top = 48.0
margin_right = 780.0
margin_bottom = 512.0
rect_min_size = Vector2( 0, 464 )
custom_constants/separation = 48

[node name="LeftButton" parent="MarginContainer/Layout/CardPreview" index="0" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 116.0
margin_bottom = 464.0

[node name="Base" parent="MarginContainer/Layout/CardPreview" index="1" instance=ExtResource( 5 )]

[node name="RightButton" parent="MarginContainer/Layout/CardPreview" index="2" instance=ExtResource( 4 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 664.0
margin_right = 780.0
margin_bottom = 464.0

[node name="Footer" type="HBoxContainer" parent="MarginContainer/Layout" index="2"]
margin_top = 536.0
margin_right = 780.0
margin_bottom = 592.0
rect_min_size = Vector2( 0, 56 )
custom_constants/separation = 0

[node name="Space" type="Control" parent="MarginContainer/Layout/Footer" index="0"]
margin_right = 693.0
margin_bottom = 56.0
size_flags_horizontal = 3

[node name="Circle" parent="MarginContainer/Layout/Footer" index="1" instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 693.0
margin_right = 749.0
margin_bottom = 56.0
rect_min_size = Vector2( 56, 0 )

[node name="Space2" type="Control" parent="MarginContainer/Layout/Footer" index="2"]
margin_left = 749.0
margin_right = 780.0
margin_bottom = 56.0
rect_min_size = Vector2( 31, 0 )

[node name="CardButton" parent="." index="2" instance=ExtResource( 6 )]
margin_left = 152.0
margin_top = 72.0
margin_right = 676.0
margin_bottom = 536.0

[node name="CardAnim" type="AnimationPlayer" parent="." index="3"]
anims/MOVE_TO_LEFT = SubResource( 1 )
anims/MOVE_TO_ORIGIN = SubResource( 4 )
anims/MOVE_TO_RIGHT = SubResource( 3 )
anims/RESET = SubResource( 2 )

[connection signal="animation_finished" from="CardAnim" to="." method="_on_CardAnim_animation_finished"]
